# pathtemplate

./: README.md  pyproject.toml
.github/workflow/: publish-to-pypi.yml
src/: pathtemplate.py
tests/: test_pathtemplate.py
