[project]
name = "pathtemplate"
version = "0.1.0"
description = "create paths with formatted placeholders"
authors = [
    {name = "Wojtek Baginski", email = "wobagi@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.pdm]
package-type = "library"
